[package]
name = "ipnetwork"
version = "0.17.0" # When updating version, also modify html_root_url in the lib.rs
authors = ["Abhishek Chanda <abhishek.becs@gmail.com>", "Linus Färnstrand <faern@faern.net>"]
description = "A library to work with IP CIDRs in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/achanda/ipnetwork"
keywords = ["network", "ip", "address", "cidr"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1"
criterion = "0.3.0"

[badges]
travis-ci = { repository = "achanda/ipnetwork" }
maintenance = { status = "passively-maintained" }

[features]
default = ["serde"]

[[bench]]
name = "parse_bench"
harness = false
