[package]
name = "ipnetwork"
version = "0.20.0"
authors = ["Abhishek Chanda <abhishek.becs@gmail.com>", "Linus Färnstrand <faern@faern.net>"]
description = "A library to work with IP CIDRs in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/achanda/ipnetwork"
keywords = ["network", "ip", "address", "cidr"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2021"

[dependencies]
serde = { version = "1", optional = true }
schemars = { version = "0.8.10", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = {version = "0.3.4", features= ["html_reports"]}
does-it-json = "0.0.3"

[badges]
travis-ci = { repository = "achanda/ipnetwork" }
maintenance = { status = "passively-maintained" }

[features]
default = ["serde"]

[[bench]]
name = "parse_bench"
harness = false
