[package]
name = "ipnetwork"
version = "0.21.1"
authors = ["Abhishek Chanda <abhishek.becs@gmail.com>", "Linus Färnstrand <faern@faern.net>"]
description = "A library to work with IP CIDRs in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/achanda/ipnetwork"
keywords = ["network", "ip", "address", "cidr"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2021"
rust-version = "1.80.0"

[dependencies]
serde = { version = "1.0.200", optional = true }
schemars = { version = "1.0.4", optional = true }

[dev-dependencies]
serde_json = "1.0.116"
criterion = {version = "0.5.1", features= ["html_reports"]}

[badges]
travis-ci = { repository = "achanda/ipnetwork" }
maintenance = { status = "passively-maintained" }

[features]
# Keep optional dependencies out of the default features.
# Since most people add a dependency without `default-features = false` they involuntarily
# pull in unused dependencies.
default = []

[[bench]]
name = "parse_bench"
harness = false
